sorta plug in the new config system